--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "second-brain"
 version = "0.1.0"
-description = "Add your description here"
+description = "Planning to build a second brain using LangChain, ZenML, and MongoDB."
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
